fix(Security): handle JWT and access denial errors via global exception handling